[gd_scene load_steps=3 format=2]

[ext_resource path="res://attente.gd" type="Script" id=1]
[ext_resource path="res://TchatRoom.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btRetour" type="Button" parent="."]
margin_left = 591.642
margin_top = 505.917
margin_right = 780.642
margin_bottom = 568.917
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbAttenteJoueurs" type="Label" parent="."]
margin_left = 600.129
margin_top = 214.0
margin_right = 737.129
margin_bottom = 245.0
text = "En attente de joueurs
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="TchatRoom" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="btRetour" to="." method="_on_btRetour_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
