[gd_scene load_steps=2 format=2]

[ext_resource path="res://attente.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 398.844
margin_top = 461.596
margin_right = 587.844
margin_bottom = 524.596
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 434.0
margin_top = 214.0
margin_right = 571.0
margin_bottom = 245.0
text = "En attente de joueurs
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
